--- a/src/styles/custom.scss
+++ b/src/styles/custom.scss
@@ -61,6 +61,14 @@ $danger: #790a04;
   max-width: 1250px;
 }
 
+.sugestedCard {
+  max-width: 200px;
+  max-height: 350px;
+  a {
+    color: black;
+  }
+}
+
 .copy {
   background-color: rgba(0, 0, 0, 0.2);
   font-size: 12px;
